--- a/404.html
+++ b/404.html
@@ -13,9 +13,9 @@
   
 
   
-  <link rel="stylesheet" href="http://www.oliverwilkie.com/css/poole.css">
-  <link rel="stylesheet" href="http://www.oliverwilkie.com/css/syntax.css">
-  <link rel="stylesheet" href="http://www.oliverwilkie.com/css/hyde.css">
+  <link rel="stylesheet" href="https://oliverwilkie.com/css/poole.css">
+  <link rel="stylesheet" href="https://oliverwilkie.com/css/syntax.css">
+  <link rel="stylesheet" href="https://oliverwilkie.com/css/hyde.css">
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=PT+Sans:400,400italic,700|Abril+Fatface">
 
   
@@ -31,7 +31,7 @@
 <div class="sidebar">
   <div class="container sidebar-sticky">
     <div class="sidebar-about">
-      <a href="http://www.oliverwilkie.com/"><h1>O.</h1></a>
+      <a href="https://oliverwilkie.com/"><h1>O.</h1></a>
       <p class="lead">
        coding and other projects by Oliver Wilkie 
       </p>
@@ -51,7 +51,7 @@
 
     <div class="content container">
       <h1>404: Page not found</h1>
-        <p class="lead">Sorry, we've misplaced that URL or it's pointing to something that doesn't exist. <a href="http://www.oliverwilkie.com/">Head back home</a> to try finding it again.</p>
+        <p class="lead">Sorry, we've misplaced that URL or it's pointing to something that doesn't exist. <a href="https://oliverwilkie.com/">Head back home</a> to try finding it again.</p>
     </div>
 
   </body>
