--- a/book/index.html
+++ b/book/index.html
@@ -13,9 +13,9 @@
   
 
   
-  <link rel="stylesheet" href="http://www.oliverwilkie.com/css/poole.css">
-  <link rel="stylesheet" href="http://www.oliverwilkie.com/css/syntax.css">
-  <link rel="stylesheet" href="http://www.oliverwilkie.com/css/hyde.css">
+  <link rel="stylesheet" href="https://oliverwilkie.com/css/poole.css">
+  <link rel="stylesheet" href="https://oliverwilkie.com/css/syntax.css">
+  <link rel="stylesheet" href="https://oliverwilkie.com/css/hyde.css">
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=PT+Sans:400,400italic,700|Abril+Fatface">
 
   
@@ -31,7 +31,7 @@
 <div class="sidebar">
   <div class="container sidebar-sticky">
     <div class="sidebar-about">
-      <a href="http://www.oliverwilkie.com/"><h1>O.</h1></a>
+      <a href="https://oliverwilkie.com/"><h1>O.</h1></a>
       <p class="lead">
        coding and other projects by Oliver Wilkie 
       </p>
@@ -53,7 +53,7 @@
     <ul class="posts">
         
         <li>
-          <span><a href="http://www.oliverwilkie.com/book/hillbilly/">Hillbilly Eligy</a> <time class="pull-right post-list">Sun, Jan 8, 2017</time></span>
+          <span><a href="https://oliverwilkie.com/book/hillbilly/">Hillbilly Eligy</a> <time class="pull-right post-list">Sun, Jan 8, 2017</time></span>
         </li>
         
     </ul>
