--- a/portfolio/papergamer/index.html
+++ b/portfolio/papergamer/index.html
@@ -38,7 +38,7 @@
 
 
 
-<link rel="stylesheet" href="/scss/hyde-hyde.c2d7b8f3f9b5714971c6cc65f746f11378ed6223f67e5af7458bd88eae9a81b7.css" integrity="sha256-wte48/m1cUlxxsxl90bxE3jtYiP2flr3RYvYjq6agbc=">
+<link rel="stylesheet" href="/scss/hyde-hyde.9cdb919290b786366914dd4806142b24b687f9b52a34d68eef049e0663057bb0.css" integrity="sha256-nNuRkpC3hjZpFN1IBhQrJLaH&#43;bUqNNaO7wSeBmMFe7A=">
 
 
 <link rel="stylesheet" href="/scss/print.2744dcbf8a0b2e74f8a50e4b34e5f441be7cf93cc7de27029121c6a09f9e77bc.css" integrity="sha256-J0Tcv4oLLnT4pQ5LNOX0Qb58&#43;TzH3icCkSHGoJ&#43;ed7w=" media="print">
